// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <a
    aria-label="name"
    class="sc-hKMtZM jJwVdZ button__a"
    href="/test"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    >
      name
    </span>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    aria-label="name"
    class="sc-hKMtZM jJwVdZ button__a"
    href="/test"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    >
      name
    </span>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="name"
    class="sc-hKMtZM jJwVdZ test-custom-classname"
    href="/test"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    >
      name
    </span>
  </a>
</div>
`;
